Add ProTracker MOD player.
Runs at 11,025 Hz otherwise the RP2040 runs out of CPU.

TODO: Make the sample rate and sub-division rate adjustable without recompilation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "snake", "flames" ]
+members = [ "snake", "flames" , "neoplay" ]
 
 [profile.release]
 opt-level = "s"
