Fix some playback issues.
1) the text now matches pro-tracker (except we print the period in hex because the note look-up is expensive)
2) samples now loop correctly
3) volume slides work correctly (I think?!)

--- a/neoplay/Cargo.toml
+++ b/neoplay/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Jonathan 'theJPster' Pallant <neotron@thejpster.org.uk>"]
 description = "4-channel ProTracker player for Neotro"
 
 [dependencies]
-neotracker = { git = "https://github.com/thejpster/neotracker.git", version = "0.1.0" }
+neotracker = { git = "https://github.com/thejpster/neotracker.git", branch = "playback-fixes" }
 neotron-sdk = { git = "https://github.com/neotron-compute/neotron-sdk.git", branch = "file-demo", features = ["fancy-panic"] }
 
 # See workspace for profile settings
