--- a/neoplay/Cargo.toml
+++ b/neoplay/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Jonathan 'theJPster' Pallant <neotron@thejpster.org.uk>"]
 description = "4-channel ProTracker player for Neotro"
 
 [dependencies]
-neotracker = { git = "https://github.com/thejpster/neotracker.git", branch = "playback-fixes" }
-neotron-sdk = { git = "https://github.com/neotron-compute/neotron-sdk.git", branch = "file-demo", features = ["fancy-panic"] }
+neotracker = { git = "https://github.com/thejpster/neotracker.git", rev = "2ee7a85006a9461b876bdf47e45b6105437a38f6" }
+neotron-sdk = { git = "https://github.com/neotron-compute/neotron-sdk.git", rev = "9a9486e85e759fe1af263190b9f4390e4307a2de", features = ["fancy-panic"] }
 
 # See workspace for profile settings
