--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 resolver = "2"
 members = [ "snake", "flames" , "neoplay" ]
 
+[workspace.dependencies]
+neotron-sdk = "0.2"
+
 [profile.release]
 opt-level = "s"
 lto = true
